--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 <header>
-    <img src="" alt="">
+    
+    <img src="assets/CTC - Logo Extended White kopie.png" alt="">
+
 </header>
 
     <section class="navbar">
@@ -25,7 +27,7 @@
     </section>
 
 
-<div>
+<div class="inleiding">
     <h1>Coding the curbs</h1>
         <h2>Flatten the peak</h2>
             <p>Coding the Curbs spreads the use of available places and thus ensures that the scarce space in city centers is used better. Through better planning, 20% fewer kilometers are covered. logistic journeys become more effective.</p>
